--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,9 +13,8 @@
 
   <div class="container">
     <div class="row"> 
-      <div class="col-md-12 jumbotron text-center" style="background-image: url(https://media1.tenor.com/images/4231f6672a5d19631863d7d3baff69f2/tenor.gif?itemid=13649260); background-size: cover; background-position: center; height: 400px;">
-        <h1><font color = "white"><b>Belly Button Biodiversity Dashboard</font></b></h1>
-        <p><font color = "white"><b>Use the interactive charts below to explore the dataset</font></b></p>
+      <div class="col-md-12 jumbotron text-center" style="background-image: url(belly_button_biodiversity.jpg); background-size: cover; background-position: center; height: 400px;">
+        <p style="margin-top:60px"><font color = "white"><b>Use the interactive charts below to explore the dataset</font></b></p>
       </div>
     </div>
     <div class="row">
@@ -47,7 +46,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="plots.js"></script>
+  <script src="plot.js"></script>
   
 
 </body>
